--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,8 @@
-[submodule "Adafruit_BusIO"]
-	path = Adafruit_BusIO
+[submodule "lib/Adafruit_BME280_Library"]
+	path = lib/Adafruit_BME280_Library
+	url = https://github.com/adafruit/Adafruit_BME280_Library.git
+[submodule "lib/Adafruit_BusIO"]
+	path = lib/Adafruit_BusIO
 	url = https://github.com/adafruit/Adafruit_BusIO.git
 [submodule "lib/Adafruit_Sensor"]
 	path = lib/Adafruit_Sensor
@@ -13,6 +16,3 @@
 [submodule "lib/SD"]
 	path = lib/SD
 	url = https://github.com/PaulStoffregen/SD.git
-[submodule "lib/Adafruit_BME280_Library"]
-	path = lib/Adafruit_BME280_Library
-	url = https://github.com/adafruit/Adafruit_BME280_Library.git
